FIX: fix search bar dropdown overflow issue

--- a/src/components/common/header/MainHeader.module.scss
+++ b/src/components/common/header/MainHeader.module.scss
@@ -144,7 +144,7 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            max-height: 350px;
+            max-height: 300px;
             overflow-y: auto;
             @media (max-width: 460px) {
                 max-height: unset;
